apps/base/infra-kubernetes-dashboard/deploy/metrics-scraper/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dashboard-metrics-scraper
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app.kubernetes.io/name: kubernetes-dashboard
    app.kubernetes.io/component: metrics-scraper
